--- a/microservice-item/src/main/resources/application.properties
+++ b/microservice-item/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=microservice-item
 server.port=8082
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+spring.config.import=optional:configserver:
