--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=config-server
 server.port=8888
 
-spring.cloud.config.server.git.uri=file:///C:/Users/Diego Obando/Documents/CodingDojo/microservicios-spring-boot/conf
+spring.cloud.config.server.git.uri=file:///C:/Users/Diego Obando/Desktop/conf
